--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "React + Webpack 4 + Babel Boilerplate 🚀",
   "main": "index.js",
   "scripts": {
+    "start": "webpack-dev-server --config ./webpack.config.js --mode development",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -11,10 +12,15 @@
     "url": "git+https://github.com/rubenamorim/react-boilerplate.git"
   },
   "keywords": [],
-  "author": "",
+  "author": "rubenamorim",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/rubenamorim/react-boilerplate/issues"
   },
-  "homepage": "https://github.com/rubenamorim/react-boilerplate#readme"
+  "homepage": "https://github.com/rubenamorim/react-boilerplate#readme",
+  "devDependencies": {
+    "webpack": "^4.6.0",
+    "webpack-cli": "^2.0.14",
+    "webpack-dev-server": "^3.1.3"
+  }
 }
